src/objects/Organization_Properties__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Disable_Autodoc_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Autodoc Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableProfileBasedEndpoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Profile Based Endpoints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideEnableMock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Enable Mock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>callProductionEndpoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>callProductionEndpoints</label>
        <type>Checkbox</type>
    </fields>
    <label>Organization Properties</label>
</CustomObject>